--- a/package.json
+++ b/package.json
@@ -18,10 +18,14 @@
   "author": "HuaFEEng",
   "license": "ISC",
   "dependencies": {
+    "antd": "^3.12.1",
+    "babel-polyfill": "^6.26.0",
+    "dayjs": "^1.7.8",
     "react": "^16.3.0",
     "react-dom": "^16.3.0"
   },
   "devDependencies": {
+    "autoprefixer": "^9.4.4",
     "babel-cli": "^6.26.0",
     "babel-eslint": "^8.2.2",
     "babel-loader": "^7.1.4",
@@ -46,6 +50,8 @@
     "gulp-vsftp": "^0.7.8",
     "gulp-zip": "^4.1.0",
     "html-webpack-plugin": "^3.1.0",
+    "less": "^3.9.0",
+    "less-loader": "^4.1.0",
     "moment-kirk": "^1.0.1",
     "optimize-css-assets-webpack-plugin": "^4.0.0",
     "postcss-cssnext": "^3.1.0",
@@ -66,5 +72,13 @@
       "no-script-url": 0,
       "jsx-a11y/href-no-hash": 2
     }
-  }
+  },
+  "browserslist": [
+    "defaults",
+    "not ie < 10",
+    "last 7 versions",
+    "> 1%",
+    "iOS 7",
+    "last 3 iOS versions"
+  ]
 }
