--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "antd": "^3.12.1",
     "babel-polyfill": "^6.26.0",
     "dayjs": "^1.7.8",
+    "lodash": "^4.17.11",
     "react": "^16.3.0",
     "react-dom": "^16.3.0"
   },
