--- a/package.json
+++ b/package.json
@@ -75,11 +75,10 @@
     }
   },
   "browserslist": [
-    "defaults",
-    "not ie < 10",
-    "last 7 versions",
-    "> 1%",
-    "iOS 7",
-    "last 3 iOS versions"
+    "last 3 version",
+    "> 2%",
+    "not ie <= 9",
+    "iOS >= 7",
+    "Android >= 4.0"
   ]
 }
