--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "data_analysis",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "prettier": "prettier --config ./.prettierrc --write ./aa.js",
+    "prettier-watch": "onchange -v -d 1000 '**/*.js' -e './node_modules/**/*.js' -- prettier --write {{changed}}",
     "entry": "node config/entry/entryBuild.js",
     "devBuildHtml": "node config/webpack/webpack.devBuildHtml.conf.js",
     "devNewFile": "npm run entry && npm run devBuildHtml",
@@ -54,10 +55,12 @@
     "less": "^3.9.0",
     "less-loader": "^4.1.0",
     "moment-kirk": "^1.0.1",
+    "onchange": "^5.2.0",
     "optimize-css-assets-webpack-plugin": "^4.0.0",
     "postcss-cssnext": "^3.1.0",
     "postcss-loader": "^2.1.3",
     "precss": "^3.1.2",
+    "prettier": "^1.15.3",
     "react-dev-utils": "^5.0.0",
     "style-loader": "^0.20.3",
     "url-loader": "^1.0.1",
