--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "data_analysis",
   "main": "index.js",
   "scripts": {
-    "prettier": "prettier --config ./.prettierrc --write ./app/aa.js",
+    "prettier": "prettier --config ./prettier.config.js --write ./app/aa.js",
     "entry": "node config/entry/entryBuild.js",
     "devBuildHtml": "node config/webpack/webpack.devBuildHtml.conf.js",
     "devNewFile": "npm run entry && npm run devBuildHtml",
