--- a/package.json
+++ b/package.json
@@ -28,8 +28,10 @@
   "devDependencies": {
     "autoprefixer": "^9.4.4",
     "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.3",
     "babel-eslint": "^7.2.3",
     "babel-loader": "^7.1.4",
+    "babel-plugin-lodash": "^3.3.4",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-react-hmre": "^1.1.1",
@@ -53,6 +55,7 @@
     "html-webpack-plugin": "^3.1.0",
     "less": "^3.9.0",
     "less-loader": "^4.1.0",
+    "lodash-webpack-plugin": "^0.11.5",
     "moment-kirk": "^1.0.1",
     "optimize-css-assets-webpack-plugin": "^4.0.0",
     "postcss-cssnext": "^3.1.0",
