--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "babel-core": "^6.26.3",
     "babel-eslint": "^7.2.3",
     "babel-loader": "^7.1.4",
+    "babel-plugin-import": "^1.11.0",
     "babel-plugin-lodash": "^3.3.4",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
