--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "dayjs": "^1.7.8",
     "lodash": "^4.17.11",
     "react": "^16.3.0",
-    "react-dom": "^16.3.0"
+    "react-dom": "^16.3.0",
+    "react-highlight-words": "^0.16.0"
   },
   "devDependencies": {
     "autoprefixer": "^9.4.4",
