--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "babel-polyfill": "^6.26.0",
     "dayjs": "^1.7.8",
     "lodash": "^4.17.11",
+    "nprogress": "^0.2.0",
     "react": "^16.3.0",
     "react-dom": "^16.3.0",
     "react-highlight-words": "^0.16.0"
