--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "nprogress": "^0.2.0",
     "react": "^16.3.0",
     "react-dom": "^16.3.0",
-    "react-highlight-words": "^0.16.0"
+    "react-highlight-words": "^0.16.0",
+    "react-split-pane": "^0.1.85"
   },
   "devDependencies": {
     "autoprefixer": "^9.4.4",
