--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "react-split-pane": "^0.1.85"
   },
   "devDependencies": {
+    "@commitlint/cli": "^7.3.2",
+    "@commitlint/config-conventional": "^7.3.1",
     "autoprefixer": "^9.4.4",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
@@ -61,6 +63,7 @@
     "gulp-vsftp": "^0.7.8",
     "gulp-zip": "^4.1.0",
     "html-webpack-plugin": "^3.1.0",
+    "husky": "^1.3.1",
     "less": "^3.9.0",
     "less-loader": "^4.1.0",
     "lodash-webpack-plugin": "^0.11.5",
@@ -96,6 +99,11 @@
   "config": {
     "commitizen": {
       "path": "./node_modules/cz-conventional-changelog"
+    }
+  },
+  "husky": {
+    "hooks": {
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
     }
   }
 }
