--- a/package.json
+++ b/package.json
@@ -71,6 +71,8 @@
     "optimize-css-assets-webpack-plugin": "^4.0.0",
     "postcss-cssnext": "^3.1.0",
     "postcss-loader": "^2.1.3",
+    "postcss-sass": "^0.3.5",
+    "postcss-scss": "^2.0.0",
     "precss": "^3.1.2",
     "prettier": "^1.15.3",
     "react-dev-utils": "^5.0.0",
