--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "precss": "^3.1.2",
     "prettier": "^1.15.3",
     "react-dev-utils": "^5.0.0",
+    "sass-loader": "^7.1.0",
     "style-loader": "^0.20.3",
     "url-loader": "^1.0.1",
     "webpack": "^4.4.1",
