--- a/package.json
+++ b/package.json
@@ -71,14 +71,21 @@
     "node-sass": "^4.11.0",
     "optimize-css-assets-webpack-plugin": "^4.0.0",
     "postcss-cssnext": "^3.1.0",
+    "postcss-html": "^0.36.0",
+    "postcss-jsx": "^0.36.0",
+    "postcss-less": "^3.1.2",
     "postcss-loader": "^2.1.3",
+    "postcss-markdown": "^0.36.0",
+    "postcss-safe-parser": "^4.0.1",
     "postcss-sass": "^0.3.5",
     "postcss-scss": "^2.0.0",
+    "postcss-syntax": "^0.36.2",
     "precss": "^3.1.2",
     "prettier": "^1.15.3",
     "react-dev-utils": "^5.0.0",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.20.3",
+    "sugarss": "^2.0.0",
     "url-loader": "^1.0.1",
     "webpack": "^4.4.1",
     "webpack-cli": "^2.0.13",
